Fix overflow in the UI & modify index.css

--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,7 @@ body {
   width: 150px;
   position: absolute;
   top: 30px;
-  right: -50px;
+  right: 0px;
   opacity: 0.3;
   z-index: 0;
 }
